# spiro

./: .gitignore  LICENSE  README.md  spiro.jucer
Source/core/: CMakeLists.txt  Makefile  bin  blueprint.cpp  blueprint.hpp  blur.cpp  blur.hpp  bus.cpp  bus.hpp  cell.cpp  cell.h  constants.cpp  constants.hpp  containers.hpp  core_test.cpp  core_test.run  curves.hpp  envelope.hpp  feeder.cpp  feeder.hpp  fonts.c  fonts.h  grid.cpp  grid.hpp  interface.cpp  interface.h  interface_headers.hpp  iospecs.cpp  iospecs.hpp  modmatrix.cpp  modmatrix.hpp  module_headers.hpp  primitives.hpp  rack.cpp  rack.hpp  scales.h  spawner.cpp  spawner.hpp  spiro.cpp  spiro.hpp  (+4 more)
Source/core/core-test/: core_test.cpp
Source/core/doc/html/: annotated.html  annotated_dup.js  blueprint_8cpp.html  blueprint_8cpp__incl.map  blueprint_8cpp__incl.md5  blueprint_8hpp.html  blueprint_8hpp.js  blueprint_8hpp__dep__incl.map  blueprint_8hpp__dep__incl.md5  blueprint_8hpp__incl.map  blueprint_8hpp__incl.md5  blueprint_8hpp_source.html  blur_8cpp.html  blur_8cpp__incl.map  blur_8cpp__incl.md5  blur_8hpp.html  blur_8hpp.js  blur_8hpp__dep__incl.map  blur_8hpp__dep__incl.md5  blur_8hpp__incl.map  blur_8hpp__incl.md5  blur_8hpp_source.html  bus_8cpp.html  bus_8cpp__incl.map  bus_8cpp__incl.md5  bus_8hpp.html  bus_8hpp.js  bus_8hpp__dep__incl.map  bus_8hpp__dep__incl.md5  bus_8hpp__incl.map  bus_8hpp__incl.md5  bus_8hpp_source.html  classA-members.html  classA.html  classA.js  classB-members.html  classB.html  classB.js  classC-members.html  (+1234 more)
Source/core/graphics/: blur.cpp  blur.hpp  curves.hpp  fonts.c  fonts.h  primitives.hpp  shapes.hpp
Source/core/modules/: add_headers.lua  com.cpp  com.hpp  cro.cpp  cro.hpp  cso.cpp  cso.hpp  env.cpp  env.hpp  interface_headers.hpp  lfo.cpp  lfo.hpp  map.cpp  map.hpp  mix.cpp  mix.hpp  node.cpp  node.hpp  pdt.cpp  pdt.hpp  rtr.cpp  rtr.hpp  snh.cpp  snh.hpp  sum.cpp  sum.hpp  vca.cpp  vca.hpp  vcd.cpp  vcd.hpp  vcf.cpp  vcf.hpp  vco.cpp  vco.hpp
Source/core/setup/: constants.cpp  constants.hpp  iospecs.hpp  map.cpp  map.hpp  midi.h  scales.h
Source/core/test/: Makefile  factory.cpp  test  test.cpp  test.run
Source/core/ui-test/: ui_test.cpp
Source/core/utility/: canvas.cpp  canvas.hpp  modmatrix.cpp  modmatrix.hpp  primitives.hpp  quaternion.cpp  quaternion.hpp  utility.cpp  utility.hpp  wavering.cpp  wavering.hpp
(+1546 files in other folders)
